--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "survey-core": "^2.5.5"
+    "survey-core": "^2.5.5",
+    "survey-react-ui": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
