--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,14 @@ jobs:
           node-version: "20"
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
+           - name: Install dependencies
+        run: npm install
+
+      - name: Verify SurveyJS packages are installed
+        run: |
+          node -p "require.resolve('survey-core/package.json')"
+          node -p "require.resolve('survey-react-ui/package.json')"
+
 
       - name: Build site
         run: npm run build
